--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
     "start": "node ./src/main.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
-  "author": "",
-  "license": "ISC",
+  "author": "lvkins",
+  "license": "MIT",
   "dependencies": {
     "lodash": "^4.17.20",
     "log4js": "^6.3.0",
